--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,10 +4,10 @@ on:
   workflow_dispatch:
   push:
     branches: main
-    paths: Packages/com.vrchat.demo-template/**
+    paths: Packages/vrchat.radangelzero.thumbnailtool/**
 
 env:
-  packageName: "com.vrchat.demo-template"
+  packageName: "vrchat.radangelzero.thumbnailtool"
 
 permissions:
   contents: write
