--- a/Packages/vrchat.radangelzero.thumbnailtool/package.json
+++ b/Packages/vrchat.radangelzero.thumbnailtool/package.json
@@ -1,15 +1,12 @@
 {
   "name": "vrchat.radangelzero.thumbnailtool",
-  "version": "0.0.2",
   "displayName": "Thumbnail Tool",
-  "description": "This is a tool for easy image upload for VRChat SDK",
+  "version": "0.0.3",
   "unity": "2019.4",
-  "unityRelease": "31f1",
+  "description": "This is a tool for easy image upload for VRChat SDK",
   "documentationUrl": "https://example.com/",
-  "changelogUrl": "https://example.com/changelog.html",
-  "licensesUrl": "https://example.com/licensing.html",
+  "vrchatVersion": "2022.1.1",
   "dependencies": {
-    "com.vrchat.base": "3.2.x"
   },
   "keywords": [
     "VRChat",
